fix: Filter non structurizr images in preview (#27)